--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Task№1
     <section class="activity_one">
         <ul id="categories">
             <li class="item">
@@ -37,6 +38,11 @@
                 </ul>
             </li>
         </ul>
-    </section>
+    </section> -->
+    <!-- Task№2
+    <ul id="ingredients"></ul> -->
+    <!-- Task№3 -->
+    <ul class="gallery"></ul>
+    <script type="module" src="/js/script.js"></script>
 </body>
 </html>
