--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
     <p>Background color: <span class="color">-</span></p>
     <button type="button" class="change-color">Change color</button>
 </div>
-    
+ <!--task10  -->
+<div id="controls">
+    <input type="number" min="1" max="100" step="1" />
+    <button type="button" data-create>Create</button>
+    <button type="button" data-destroy>Destroy</button>
+</div>
+
+<div id="boxes"></div>
+
 <script type="module" src="/js/script.js"></script>
 <script type="module" src="/js/scriptTask2.js"></script>
 <script type="module" src="/js/scriptTask3.js"></script>
@@ -86,5 +94,6 @@
 <script type="module" src="/js/scriptTask7.js"></script>
 <script type="module" src="/js/scriptTask8.js"></script>
 <script type="module" src="/js/scriptTask9.js"></script>
+<script type="module" src="/js/scriptTask10.js"></script>
 </body>
 </html>
