--- a/index.html
+++ b/index.html
@@ -8,59 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- task1 -->
-<section class="activity_one">
-    <ul id="categories">
-        <li class="item">
-            <h2>Animals</h2>
-            <ul>
-                <li>Cat</li>
-                <li>Hamster</li>
-                <li>Horse</li>
-                <li>Parrot</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Products</h2>
-            <ul>
-                <li>Bread</li>
-                <li>Prasley</li>
-                <li>Cheese</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Technologies</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node.js</li>
-            </ul>
-        </li>
-    </ul>
-</section>
-<!-- task2 -->
-<ul id="ingredients"></ul>
+    
+
 <!-- task3 -->
-<ul class="gallery"></ul>
+<!-- <ul class="gallery"></ul> -->
 <!-- task4 -->
-<div id="counter">
+<!-- <div id="counter">
     <button type="button" data-action="decrement">-1</button>
     <span id="value">0</span>
     <button type="button" data-action="increment">+1</button>
-</div>
+</div> -->
 <!-- task5 -->
-<input type="text" id="name-input" placeholder="Please enter your name" />
-<h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+<!-- <input type="text" id="name-input" placeholder="Please enter your name" />
+<h1>Hello, <span id="name-output">Anonymous</span>!</h1> -->
 <!-- task6 -->
-<input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
+<!-- <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" /> -->
 <!-- task7 -->
-<input id="font-size-control" type="range" min="16" max="96" />
+<!-- <input id="font-size-control" type="range" min="16" max="96" />
 <br />
-<span id="text">Abracadabra!</span>
+<span id="text">Abracadabra!</span> -->
 <!-- task8 -->
-<form class="login-form">
+<!-- <form class="login-form">
     <label>
         Email
         <input type="email" name="email" />
@@ -70,12 +38,12 @@
         <input type="password" name="password" />
     </label>
     <button type="submit">Login</button>
-</form>
+</form> -->
 <!-- task9 -->
-<div class="widget">
+<!-- <div class="widget">
     <p>Background color: <span class="color">-</span></p>
     <button type="button" class="change-color">Change color</button>
-</div>
+</div> -->
  <!--task10  -->
 <div id="controls">
     <input type="number" min="1" max="100" step="1" />
