--- a/html Tasks/Task6.html
+++ b/html Tasks/Task6.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
 </body>
 </html>
