--- a/html Tasks/Task7.html
+++ b/html Tasks/Task7.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input id="font-size-control" type="range" min="16" max="96" />
+    <br />
+    <span id="text">Abracadabra!</span>
 </body>
 </html>
