--- a/html Tasks/Task8.html
+++ b/html Tasks/Task8.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form class="login-form">
+        <label>
+            Email
+            <input type="email" name="email" />
+        </label>
+        <label>
+            Password
+            <input type="password" name="password" />
+        </label>
+        <button type="submit">Login</button>
+    </form>
 </body>
 </html>
