--- a/html Tasks/Task8.html
+++ b/html Tasks/Task8.html
@@ -18,5 +18,6 @@
         </label>
         <button type="submit">Login</button>
     </form>
+    <script type="module" src="/js/scriptTask8.js"></script>
 </body>
 </html>
