--- a/html Tasks/Task9.html
+++ b/html Tasks/Task9.html
@@ -11,5 +11,6 @@
         <p>Background color: <span class="color">-</span></p>
         <button type="button" class="change-color">Change color</button>
     </div>
+    <script type="module" src="/js/scriptTask9.js"></script>
 </body>
 </html>
