--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
 <body>
     
+   <a href="./html Tasks/Task1.html" class="link"></a>
+   <a href="./html Tasks/Task2.html" class="link"></a>
+   <a href="./html Tasks/Task3.html" class="link"></a>
+   <a href="./html Tasks/Task4.html" class="link"></a>
+   <a href="./html Tasks/Task5.html" class="link"></a>
+   <a href="./html Tasks/Task6.html" class="link"></a>
+   <a href="./html Tasks/Task7.html" class="link"></a>
+   <a href="./html Tasks/Task8.html" class="link"></a>
+   <a href="./html Tasks/Task9.html" class="link"></a>
+   <a href="./html Tasks/Task10.html" class="link"></a> 
 
 
 
@@ -21,21 +30,5 @@
 
 
 
-
-
-
- 
-
-
-<script type="module" src="/js/script.js"></script>
-<script type="module" src="/js/scriptTask2.js"></script>
-<script type="module" src="/js/scriptTask3.js"></script>
-<script type="module" src="/js/scriptTask4.js"></script>
-<script type="module" src="/js/scriptTask5.js"></script>
-<script type="module" src="/js/scriptTask6.js"></script>
-<script type="module" src="/js/scriptTask7.js"></script>
-<script type="module" src="/js/scriptTask8.js"></script>
-<script type="module" src="/js/scriptTask9.js"></script>
-<script type="module" src="/js/scriptTask10.js"></script>
 </body>
 </html>
