--- a/html Tasks/Task4.html
+++ b/html Tasks/Task4.html
@@ -12,5 +12,6 @@
         <span id="value">0</span>
         <button type="button" data-action="increment">+1</button>
     </div>
+    <script type="module" src="/js/scriptTask4.js"></script>
 </body>
 </html>
