--- a/html Tasks/Task5.html
+++ b/html Tasks/Task5.html
@@ -9,5 +9,6 @@
 <body>
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+    <script type="module" src="/js/scriptTask5.js"></script>
 </body>
 </html>
