--- a/html Tasks/Task7.html
+++ b/html Tasks/Task7.html
@@ -10,5 +10,6 @@
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
+    <script type="module" src="/js/scriptTask7.js"></script>
 </body>
 </html>
