--- a/index.html
+++ b/index.html
@@ -6,29 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-   <a href="./html Tasks/Task1.html" class="link"></a>
-   <a href="./html Tasks/Task2.html" class="link"></a>
-   <a href="./html Tasks/Task3.html" class="link"></a>
-   <a href="./html Tasks/Task4.html" class="link"></a>
-   <a href="./html Tasks/Task5.html" class="link"></a>
-   <a href="./html Tasks/Task6.html" class="link"></a>
-   <a href="./html Tasks/Task7.html" class="link"></a>
-   <a href="./html Tasks/Task8.html" class="link"></a>
-   <a href="./html Tasks/Task9.html" class="link"></a>
-   <a href="./html Tasks/Task10.html" class="link"></a> 
-
-
-
-
-
-
-
-
-
-
-
-
+<body> 
+   <ul>
+       <li><a href="Task1.html">Task1</a></li>
+       <li><a href="Task2.html">Task2</a></li>
+       <li><a href="Task3.html">Task3</a></li>
+       <li><a href="Task4.html">Task4</a></li>
+       <li><a href="Task5.html">Task5</a></li>
+       <li><a href="Task6.html">Task6</a></li>
+       <li><a href="Task7.html">Task7</a></li>
+       <li><a href="Task8.html">Task8</a></li>
+       <li><a href="Task9.html">Task9</a></li>
+       <li><a href="Task10.html">Task10</a></li>
+   </ul>
 </body>
 </html>
