--- a/Task1.html
+++ b/Task1.html
@@ -38,6 +38,6 @@
             </li>
         </ul>
     </section>
-    <script type="module" src="/js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
