--- a/Task2.html
+++ b/Task2.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <ul id="ingredients"></ul>
-    <script type="module" src="/js/scriptTask2.js"></script>
+    <script type="module" src="js/scriptTask2.js"></script>
 </body>
 </html>
