--- a/Task3.html
+++ b/Task3.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <ul class="gallery"></ul>
-    <script type="module" src="/js/scriptTask3.js"></script>
+    <script type="module" src="./js/scriptTask3.js"></script>
 </body>
 </html>
